# DownscalingEMT

./: .gitignore  README.md  download_esa_worldcover_2021.py  pyproject.toml
examples/: emt_calibration_workflow.py  physical_emt_maps.py  real_location_query.py  synthetic_run.py
src/topmodel_dispatch_hybrid/: __init__.py  emt.py  geospatial.py  model.py  observations.py  paddockts_bridge.py  physical_emt.py  smips_integration.py  terrain.py  workflow.py
tests/: test_emt_framework.py  test_model.py
